# elm-architecture-cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md  example.cpp
.github/workflows/: ccpp.yml
include/elm-architecture/: elm-architecture.hpp
